@@ -1,4 +1,8 @@
 <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+<app-header
+  [collapsed]="isSideNavCollapsed"
+  [screenWidth]="screenWidth"  
+></app-header>
 <app-body 
   [collapsed]="isSideNavCollapsed"
   [screenWidth]="screenWidth"
