@@ -1,0 +1,58 @@
+<div class="head" [ngClass]="getHeadClass()">
+
+  <div class="head-content">
+    
+    <!-- Left side of header -->
+    <div class="head-content-left">
+      <div class="search-container">
+        <div class="normal-search">
+          <input type="search" class="search" name="" id="" placeholder="Search..." />
+          <mat-icon class="search-icon">search</mat-icon>
+        </div>
+      </div>
+    </div>
+
+    <!-- Right side of header -->
+    <div class="head-content-right">
+      
+      <div class="head-menu">
+        
+        <div class="head-menu-item">
+          <button mat-icon-button class="head-menu-item-btn">
+            <img src="flags/us.jpg" class="flag" alt="flag"/>
+          </button>
+        </div>
+
+        <div class="head-menu-item"> 
+          <button mat-icon-button class="head-menu-item-btn">
+            <mat-icon class="menu-icon">fit_screen</mat-icon>
+          </button>
+        </div>
+
+        <div class="head-menu-item"> 
+          <button mat-icon-button class="head-menu-item-btn">
+            <mat-icon class="menu-icon">notifications</mat-icon>
+          </button>
+        </div>
+
+        <div class="head-menu-item"> 
+          <button mat-icon-button class="head-menu-item-btn">
+            <mat-icon class="menu-icon" >chat</mat-icon>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="head-user-avatar-container">
+        <div class="head-user-avatar">
+          <img src="users/user3.jpg" alt="user" class="user-avatar">
+          <div class="circle-indicator pulse"></div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+
+</div>
