@@ -1,0 +1,147 @@
+
+.head {
+  width: calc(100% - 5rem);
+  margin-left: 5rem;
+  z-index: 1;
+  transition: all .5s ease;
+  background: #f4f7fa;
+  padding: 1rem 1.5rem 0 1.5rem;
+
+  position: fixed;
+  top: 0;
+
+  .head-content {
+    background-color: #fff;
+    border-radius: 0.625rem;
+    box-shadow: 0px 0px 10px 0 rgb(34 41 47 / 10%);
+    padding: 0.813rem 1.563rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    .head-content-left {
+      .search-container {
+        position: relative;
+
+        .normal-search {
+          .search {
+            border: none;
+            height: 2.375rem;
+            padding-left: 2.5rem;
+            padding-right: 1.25rem;
+            background-color: #f3f3f9;
+            box-shadow: none;
+            border-radius: 1.875rem;
+            outline: 0;
+          }
+
+          .search-icon {
+            position: absolute;
+            font-size: 1rem;
+            line-height: 2.375rem;
+            left: 0.813rem;
+            top: 0;
+            color: #74788d;
+          }
+
+        }
+
+      }
+    }
+
+
+    .head-content-right {
+      display: flex;
+      align-items: center;
+
+      .head-menu {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-left: 1.25rem;
+        
+        .head-menu-item {
+          .head-menu-item-btn {
+            font-size: 18px;
+            height: 42px;
+            width: 42px;
+            cursor: pointer;
+            border: 1px solid transparent;
+            border-radius: 50%;
+            margin-left: 5px;
+            outline: 0;
+            color: #495057;
+
+            .flag {
+              height: 17px;
+              border-radius: 3px;
+              margin-top: 2px;
+            }
+          }
+
+
+          .head-menu-item-btn:hover,
+          .head-menu-item-btn:focus {
+            background: #eff2f3;
+            .menu-icon {
+              color: #699dfa;
+            }
+          }
+
+        }
+      
+      }
+
+      .head-user-avatar-container {
+        margin-left: 20px;
+
+        .head-user-avatar {
+          position: relative;
+
+          .user-avatar {
+            margin-bottom: -4px;
+            width: 50px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgb(35 35 35 / 15%);
+            cursor: pointer;
+          }
+
+        }
+
+        .circle-indicator {
+          width: 8px;
+          height: 8px;
+          border-radius: 50%;
+          position: absolute;
+          top: -2px;
+          right: -3px;
+          background: #699dfa;
+
+          &.pulse {
+            animation: pulse-animation 1.2s infinite;
+          }
+        }
+      }
+    }
+  }
+}
+
+.head-trimmed {
+  width: calc(100% - 16.5625rem);
+  margin-left: 16.5625rem;
+}
+
+.head-md-screen {
+  width: calc(100% - 5rem);
+  margin-left: 5rem;
+}
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0 rgba(26, 104, 206, 0.6);
+  }
+  100% {
+    box-shadow: 0 0 0 13px rgba(17, 64, 126, 0.6)
+  }
+}
