@@ -4,7 +4,7 @@
     <button class="logo" (click)="toggleCollapse()">A</button>
     <div class="logo-text" @onSidenavText_FadeInOut *ngIf="collapsed">Angular</div>
     <button class="btn-close" @onSidenavBtn_Rotate (click)="closeSidenav()" *ngIf="collapsed" >
-      <mat-icon class="fa-times">closeicon</mat-icon>
+      <mat-icon class="fa-times">close</mat-icon>
     </button>
   </div>
 
