@@ -2,7 +2,7 @@
   background-color: #263238;
   transition: all .5s ease;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   width: 5rem;
   height: 100vh;
